[package]
name = "nstack"
version = "0.14.0-rc.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
description = "Arity 4 stack for the kelvin merkle toolkit"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/nstack"
keywords = ["merkle", "datastructure", "stack"]

[dependencies]
microkelvin = "0.15.0-rc"
canonical = "0.7"
canonical_derive = "0.7"

[features]
persistence = ["microkelvin/persistence"]
