[package]
name = "nstack"
version = "0.15.0-rkyv.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
    "Miłosz Muszyński <milosz@dusk.network>"
]
edition = "2018"
description = "Arity 4 stack for the kelvin merkle toolkit"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/nstack"
keywords = ["merkle", "datastructure", "stack"]

[dependencies]
ranno = { git = "ssh://git@github.com/dusk-network/ranno", branch = "main" }
microkelvin = { git = "ssh://git@github.com/dusk-network/microkelvin", branch = "tree-only" }
