[package]
name = "nstack"
version = "0.15.0-rkyv.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
    "Miłosz Muszyński <milosz@dusk.network>",
    "Eduardo Leegwater Simões <eduardo@dusk.network>"
]
edition = "2021"
description = "Arity 4 stack for the kelvin merkle toolkit"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/nstack"
keywords = ["merkle", "datastructure", "stack"]

[dependencies]
microkelvin = "0.17.0-rc"
ranno = "0.1"
